@@ -3753,7 +3753,7 @@ functions are provided:
 
 </section>
 
-<section id="pathprint"><title>pathnames</title>
+<section id="pathprint"><title>Pathnames</title>
 
 <para>Pathnames are printed as follows: If &print-escape-var; is &nil;,
  only the namestring is printed; otherwise it is printed with the
@@ -3774,6 +3774,18 @@ functions are provided:
   non-&nil; and the namestring will be parsed to a dissimilar object
   (with the current value of &parsedot;), an &error-t; of type
   &print-not-readable-t; is &signal;ed.</simpara></warning>
+
+</section>
+
+<section id="spacecharprint"><title>Characters</title>
+
+<para>Characters are printed as specified in &ansi-cl;, with one exception:
+ The space character is printed as
+ <computeroutput>#\Space</computeroutput> when the variable &spacecharprint;
+ is &nil;. When &spacecharprint; is non-&nil;, it is printed as
+ <computeroutput>#\ </computeroutput>; this is how <ulink
+ url="&clhs;/Body/sec_22-1-3-2.html">22.1.3.2 Printing Characters</ulink>
+ specifies it.</para>
 
 </section>
 
