@@ -1,3 +1,11 @@
+2004-03-14  Bruno Haible  <bruno@clisp.org>
+
+	* spvw.d (init_symbol_values): Initialize *PRINT-SPACE-CHAR-ANSI*.
+	* misc.d (SYS::SET-ANSI): Set *PRINT-SPACE-CHAR-ANSI* as well.
+	* io.d (pr_character): Print #\Space as "#\ " if *PRINT-SPACE-CHAR-ANSI*
+	is true.
+	* places.lisp (*ansi*): Update documentation.
+
 2004-03-13  Bruno Haible  <bruno@clisp.org>
 
 	* lispbibl.d (back_trace_check): Change argument type to 'const char*'.
